tests-system/rbt-markup-string-values/output
len(s + s + s + s + s + s + s + s + s + s) == 1000,
                                           ^^ rbt-markup-string-values/foo.rsl:10: issue: expression is always true [vcg-always-true]
s = "not all strings are markup strings: [[ is special"
                                               ^^^^^^^ rbt-markup-string-values/foo.trlc:8: error: expected ]], encountered identifier instead
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 1 warning(s) and 1 error(s)
